# ApplyBot

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  nginx.conf  nginx.conf.template  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_scheduler_tables.py  0003_auto_reply_tables.py
app/: __init__.py  entrypoint.sh  main.py  tasks.py
app/core/: __init__.py  config.py  exceptions.py  redis_client.py  storage.py
app/models/: __init__.py  application.py  scheduler.py  token.py  user.py
app/routers/: __init__.py  apply.py  auth.py  auto_reply.py  hh_apply.py  mvp.py  scheduler.py
app/schemas/: __init__.py  apply.py  scheduler.py
app/services/: __init__.py  application_service.py  auto_reply_service.py  claude_client.py  hh_client.py  prompt_builder.py  scheduler_service.py
app/services/llm/: __init__.py  base.py  dependencies.py  enhanced_providers.py  factory.py  providers.py
app/static/: config.js  index.html  script.js  styles.css
app/utils/: __init__.py  filters.py  validators.py
tests/: __init__.py  conftest.py  test_api.py  test_application_service.py  test_bulk_apply.py  test_config.py  test_cover_letter.py  test_exceptions.py  test_filters.py  test_hh_client.py  test_integration.py  test_llm.py  test_models.py  test_prompt_builder.py  test_routers.py  test_schemas.py  test_storage.py  test_unbound_fix.py  test_validators.py
tests/api/: test_apply_endpoints.py  test_auth_endpoints.py
tests/data_integrity/: test_data_validation.py
tests/e2e/: test_application_flow.py
tests/error_handling/: test_error_scenarios.py
tests/integration/: test_application_service.py  test_hh_client.py
tests/monitoring/: test_logging.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_filters.py  test_llm_providers.py  test_prompt_builder.py  test_validators.py
tests/utils/: test_helpers.py
