[project]
name = "applybot"
version = "0.1.0"
description = ""
authors = [
    {name = "FrostWillmott",email = "i.tkachenko@zohomail.eu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12)",
    "starlette (>=0.49.1)",
    "uvicorn (>=0.34.3)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "rq (>=2.4.0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "anthropic (>=0.54.0,<0.55.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
httpx = "^0.28.1"

[tool.poetry]
packages = [
  { include = "app", from = "." }
]
